# crongen

./: .gitignore  AGENTS.md  README.md  agent-chron-spec-v2.md  agent-chron-ui-design.md  agentcron.pen  crongen-spec-v2.md  crongen-ui-design.md  crongen.pen  index.html  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: releases.md
scripts/ci/: check-release-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent_templates.rs  attachment_context.rs  commands.rs  context.rs  db.rs  git_manager.rs  lib.rs  models.rs  orchestrator.rs  plan_generator.rs  pty_manager.rs  sdk_manager.rs  toon.rs  validation.rs  windows_process.rs
src-tauri/tests/: phase2_test.rs
src/components/: AgentCard.tsx  AgentModal.tsx  CanvasToolbar.tsx  ContentArea.tsx  DecisionCanvas.tsx  DeleteConfirm.tsx  DeleteNodeConfirm.tsx  DeleteSessionConfirm.tsx  DndContext.tsx  ExecutionEdge.tsx  ExecutionNode.tsx  ForkModal.tsx  InspectorPanel.tsx  MergeDialog.tsx  NodePalette.tsx  NodeTerminalDialog.tsx  OrchestratorActivity.tsx  OrchestratorDecisionModal.tsx  PathCountControl.tsx  PlanExpansionModal.tsx  ProjectCard.tsx  ProjectModal.tsx  PromptAttachments.tsx  RefinePlanModal.tsx  SdkSessionView.tsx  SessionCard.tsx  SessionModal.tsx  SettingsModal.tsx  Sidebar.tsx  TerminalView.tsx
src/hooks/: useSdkSession.ts  useTerminal.ts  useTreeLayout.ts
src/lib/: agent-runtime.ts  agent-templates.ts  flow-mode.ts  node-type-inference.ts  tauri-commands.ts  utils.ts
src/types/: index.ts  (+2 more)
(+7 files in other folders)
